# helparik

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  configuration.py  docker-compose.yaml  main.py  pyproject.toml
bot/locales/ua/: strings.ini
bot/middleware/: user_base.py
bot/routers/: balance_router.py  contacts_router.py  everything_else_router.py  intmax_wallet.py  main_router.py  registration_router.py
bot/services/: redis_client.py
bot/utils/: ai_helper.py  chatgpt_connector.py  eth_accounts.py  eth_connector.py  intmax_connector.py  keyboards.py  message_generator.py
database/: base.py  connector.py
database/alembic/: env.py
database/alembic/versions/: 40059d48ee12_.py  46d3241c8490_add_chat_and_message.py  ab97dc40e892_.py  bb7d77b2a4a1_.py  d969c0f44afa_.py  fcb0614eb98a_add_message.py  fd4174154880_.py
database/models/: gpt.py  user.py
intmax_handler/: Dockerfile  package-lock.json  package.json  server.js  test.js
