[project]
name = "helparik"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.1.0",
    "aiogram>=3.0.0",
    "openai>=1.86.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
