[tool.poetry]
name = "helparik"
version = "0.1.0"
description = ""
authors = ["ali"]
readme = "README.md"
packages = [
    { include = "bot" }
]


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
python-dotenv = "^1.1.0"
aiogram = "^3.0.0"
openai = "^1.86.0"
aiofiles = "^24.1.0"
aiohappyeyeballs = "^2.4.3"
aiohttp = "^3.10.10"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
async-timeout = "^4.0.3"
asyncpg = "^0.30.0"
attrs = "^24.2.0"
beautifulsoup4 = "^4.12.3"
bitarray = "^3.4.2"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.3.2"
ckzg = "^2.1.1"
cryptography = "^43.0.1"
cytoolz = "^1.0.1"
eth-account = "^0.13.7"
eth-hash = "^0.7.1"
eth-keyfile = "^0.8.1"
eth-keys = "^0.7.0"
eth-rlp = "^2.2.0"
eth-typing = "^5.2.1"
eth-utils = "^5.3.0"
eth_abi = "^5.2.0"
frozenlist = "^1.5.0"
hexbytes = "^1.3.1"
idna = "^3.10"
magic-filter = "^1.0.12"
Mako = "^1.3.6"
MarkupSafe = "^3.0.2"
multidict = "^6.1.0"
parsimonious = "^0.10.0"
propcache = "^0.2.0"
psycopg2 = "^2.9.9"
pycparser = "^2.22"
pycryptodome = "^3.23.0"
pydantic = "^2.9.2"
pydantic_core = "^2.23.4"
PyJWT = "^2.9.0"
python-dateutil = "^2.9.0"
pyunormalize = "^16.0.0"
redis = "^6.0.0"
regex = "^2024.11.6"
requests = "^2.32.3"
rlp = "^4.1.0"
six = "^1.16.0"
soupsieve = "^2.7"
tenacity = "^9.1.2"
toolz = "^1.0.0"
types-requests = "^2.32.4.20250611"
typing_extensions = "^4.12.2"
urllib3 = "^2.2.3"
web3 = "^7.12.0"
websockets = "^15.0.1"
yarl = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
